--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.2.0",
     "express": "^4.18.2",
-    "firebase": "^9.22.2",
+    "firebase": "^9.23.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.0",
     "nodemon": "^2.0.22"
