--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.2.0",
     "express": "^4.18.2",
     "firebase": "^9.23.0",
+    "firebase-admin": "^11.9.0",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.0",
     "nodemon": "^2.0.22"
