--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "firebase": "^9.23.0",
     "firebase-admin": "^11.9.0",
+    "firebase-functions": "^4.4.1",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.0",
     "nodemon": "^2.0.22"
