--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^9.23.0",
     "firebase-admin": "^11.9.0",
     "firebase-functions": "^4.4.1",
+    "moment": "^2.29.4",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.0",
     "nodemon": "^2.0.22"
